refactor: standardize gRPC error handling, expand domain request models, and migrate Kubernetes manifests to kustomize-based architecture.